dev/styles/_mediaQueries.scss
/* ----- BREAK POINT: 940px -----*/
@media (max-width: 940px){
    .cards {
        column-count: 2;
    }
}
/* ----- BREAK POINT: 780px -----*/
@media (max-width: 780px) {
    h1 {
        font-size: 2.5rem;
    }
    h2 {
        font-size: 1.8rem;
    }   
    p {
        font-size: 1.2rem;
    }
    label {
        font-size: 1rem;
    }
    .cards {
        column-count: 1;
    }
    .card-container h5.card-title {
        font-size: 1rem;
    }
    p.card-text {
        font-size: 0.7rem;
    }
    label + h3 {
        font-size: 1.5rem;
    }
    input[type=text] + p {
        font-size: 1rem;
    }
    button[type=submit] {
        padding: 10px;
        font-size: 1.2rem;
    }
    a.btn.btn-primary {
        font-size: 0.5rem;
    }
}
/* ----- BREAK POINT: 480px -----*/
@media (max-width: 480px) {

    h1 {
        font-size: 1.6rem;
    }
    h2 {
        font-size: 1.1rem;
    }   
    form#search-form input[type=text] {
    text-indent: 1rem;
    font-size: 1rem;
    }
    input[type=text] + p {
    font-size: .8rem;
    }
    label {
        font-size: .4rem;
    }
    input[id=relevance],
    input[id=top],
    input[id=new]{
        display: inline-block;
    }
    input[type=radio] {
        margin-left: 15px;
        vertical-align: bottom;
        ~ label {
            margin-left: 5px;
        }
    }
    input[type=radio] ~ p {
        display: block;
    }
    label + h3 {
        font-size: 1rem;
    }
    select#limit {
        text-indent: 1rem;
        font-size: 1rem;
    }
    .empty-alert {
        background: lightsalmon;
        padding: 10px 0;
        font-size:.8rem;
        text-indent: 1rem;
    }
}

